--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 package-lock.json
 node_modules/
 secrets.js
+
+.DS_Store
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
