--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
+    "mongoose": "^5.11.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
